# splitsy

./: .env.example  docker-compose.yml
splitsy-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
splitsy-backend/.github/workflows/: ci-run-tests.yml
splitsy-backend/docs/api_client/yaak/: yaak.splitsy.json
splitsy-backend/migrations/: env.py
splitsy-backend/migrations/versions/: 1abc875609e6_add_is_active_to_group_participants.py  220a01ab7884_initial_schema.py  3f8c2a1d4e57_add_owner_id_to_groups.py
splitsy-backend/src/: composition_root.py
splitsy-backend/src/domain/common/: errors.py
splitsy-backend/src/domain/settlements/: __init__.py
splitsy-backend/src/infrastructure/auth/: jwt_token_service.py
splitsy-backend/src/infrastructure/common/: base_orm.py  mapper.py  relational_db.py
splitsy-backend/src/infrastructure/security/: argon2_password_hasher.py
splitsy-backend/src/presentation/rest_api/: api_settings.py  dependencies.py  main.py
splitsy-backend/tests/: conftest.py
splitsy-backend/tests/infrastructure/: conftest.py  test_argon2_password_hasher.py  test_expenses_repository.py  test_groups_repository.py  test_jwt_token_service.py  test_settlements_repository.py  test_users_repository.py
splitsy-backend/tests/mothers/: __init__.py  expense_mother.py  group_mother.py  settlement_mother.py  user_mother.py
splitsy-backend/tests/presentation/rest_api/: test_auth.py  test_expenses.py  test_groups.py  test_settlements.py  (+1 more)
(+455 files in other folders)
