[project]
name = "splitsy-backend"
version = "0.1.0"
description = "Splitsy backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.123.0",
    "fastapi-health>=0.4.0",
    "httpx~=0.28.1",
    "asyncpg~=0.30.0",
    "pwdlib[argon2]~=0.2.1",
    "pydantic-settings~=2.10.1",
    "pydantic[email]~=2.11.7",
    "pyjwt~=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]~=2.0.43",
    "uvicorn~=0.35.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "faker~=37.4.0",
    "polyfactory~=2.21.0",
    "pre-commit~=4.2.0",
    "pytest-cov~=6.2.1",
    "pytest-mock~=3.14.1",
    "pytest~=8.4.1",
    "ruff~=0.12.1",
    "pytest-asyncio~=1.1.0",
    "aiosqlite~=0.21.0",
    "pytest-env~=1.1.5",
    "freezegun~=1.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pytest_env]
DATABASE_URI = "sqlite+aiosqlite:///:memory:"

[project.scripts]
dev = "main:run"

[tool.ruff.lint.pydocstyle]
convention = "google"
